# pyCellChat

./: .gitignore  potential_issues_working_doc.md  pyproject.toml  tox.toml
scripts/: export_cellchat_db.R
src/py_cellchat/: __init__.py  cellchat.py  cellchat_db.py
src/py_cellchat/core/: __init__.py  cellchat.py  lifecycle.py  matrix.py
src/py_cellchat/database/: __init__.py  cellchat_db.py  extract.py  query.py
src/py_cellchat/modeling/: __init__.py  compute_communication_probability.py  compute_communication_probability_pathway.py  expression.py  filter_communication.py  statistics.py
tests/: .gitignore  _ground_truth.py  conftest.py  test_all.py  test_util.py
tests/data/: benchmark_dataset.ipynb  generate_test_data.R
tests/r_scripts/: base_ground_truth.R  generate_cp_ground_truth.R  generate_database_ground_truth.R  generate_fc_ground_truth.R  generate_iog_ground_truth.R  generate_ioi_ground_truth.R  generate_pbmc3k_ground_truths.R  generate_synthetic_ground_truths.R
tests/test_scripts/: test_cellchat_constructor.py  test_cellchat_db_loader.py  test_compute_communication_probability.py  test_extract_gene.py  test_filter_communication.py  test_identify_over_expressed_genes.py  test_identify_over_expressed_interactions.py  test_subset_data.py  test_subset_db.py
tests/unit/: test_cellchat_constructor.py  test_cellchat_db_loader.py  test_extract_gene.py  test_identify_over_expressed_genes_pbmc3k.py  test_identify_over_expressed_genes_synthetic.py  test_identify_over_expressed_interactions.py  test_subset_data.py  test_subset_db.py
(+4 files in other folders)
